[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doorknock"
version = "0.1.0"
description = "Detect a website's anti-bot defenses and rate how hard it is to scrape."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "doorknock" }]
keywords = ["scraping", "anti-bot", "waf", "captcha", "cloudflare", "datadome", "bot-detection", "web-scraping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28",
    "urllib3>=1.26",
]

[project.optional-dependencies]
cli = ["rich>=13.0"]
dev = ["pytest>=7", "rich>=13.0"]

[project.scripts]
doorknock = "doorknock.cli:main"

[project.urls]
Homepage = "https://github.com/yourname/doorknock"
Issues = "https://github.com/yourname/doorknock/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
doorknock = ["py.typed"]
